Resources/IAC-DNS/infrastructure/projects/faraday/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: faraday
  labels:
    app.kubernetes.io/name: faraday
    app.kubernetes.io/component: security-platform
