Resources/IAC-DNS/infrastructure/projects/faraday/faraday-ingressroute.yaml
# Faraday IngressRoute
# Access via: https://faraday.knowledgeondemand.net
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: faraday
  namespace: faraday
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`faraday.knowledgeondemand.net`)
      kind: Rule
      services:
        - name: faraday
          port: 5985
      middlewares:
        - name: secure-headers
          namespace: traefik
  tls:
    secretName: faraday-tls
